Instructions for the grader.